--- a/images/php/centos7/cli/Dockerfile
+++ b/images/php/centos7/cli/Dockerfile
@@ -2,7 +2,7 @@ FROM centos:7
 
 ARG PHP_VERSION
 ARG PHP_EXTENSIONS="bcmath cli common gd gmp intl json mbstring \
-    mcrypt sodium mysqlnd opcache pdo pecl-msgpack pecl-amqp pecl-redis pecl-imagick pecl-zip process soap xml xmlrpc"
+    mcrypt sodium mysqlnd opcache pdo pecl-msgpack pecl-amqp pecl-redis pecl-imagick pecl-zip pgsql process soap xml xmlrpc"
 
 ENV PHP_VERSION                 $PHP_VERSION
 ENV COMPOSER_ALLOW_SUPERUSER    1
@@ -26,8 +26,8 @@ RUN set -eux \
      which \
   && yum install -y --enablerepo=ius git222 \
   && yum clean all && rm -rf /var/cache/yum \
-  && alternatives --install /usr/bin/composer composer /usr/bin/composer1 99 \
-  && alternatives --install /usr/bin/composer composer /usr/bin/composer2 1
+  && alternatives --install /usr/bin/composer composer /usr/bin/composer1 1 \
+  && alternatives --install /usr/bin/composer composer /usr/bin/composer2 99
 
 RUN set -eux \
   && yum install -y https://rpms.remirepo.net/enterprise/remi-release-7.rpm \
