--- a/images/php/debian/fpm/Dockerfile
+++ b/images/php/debian/fpm/Dockerfile
@@ -20,6 +20,9 @@ RUN set -eux \
      echo; \
      echo '; Ensure worker stdout and stderr are sent to the main error log.'; \
      echo 'catch_workers_output = yes'; \
+     echo; \
+     echo '; Enable ping path.'; \
+     echo 'ping.path = /ping'; \
      } | tee pool.d/docker.conf \
 	&& { \
      echo '[global]'; \
