--- a/.github/workflows/main-docker-image-php.yml
+++ b/.github/workflows/main-docker-image-php.yml
@@ -81,7 +81,7 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "centos7", "centos8", "debian" ]
-        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0" ]
         build_group: [ "magento1" ]
         exclude:
           - docker_base_images: "centos8"
@@ -108,7 +108,7 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "centos7", "centos8", "debian" ]
-        php_version: [ "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        php_version: [ "7.0", "7.1", "7.2", "7.3", "7.4", "8.0" ]
         build_group: [ "magento2" ]
         exclude:
           - docker_base_images: "centos8"
@@ -135,7 +135,7 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "centos7", "centos8", "debian" ]
-        php_version: [ "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        php_version: [ "7.0", "7.1", "7.2", "7.3", "7.4", "8.0" ]
         build_group: [ "magento2-web" ]
         exclude:
           - docker_base_images: "centos8"
@@ -162,7 +162,7 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "centos7", "centos8", "debian" ]
-        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0" ]
         build_group: [ "wordpress" ]
         exclude:
           - docker_base_images: "centos8"
@@ -189,7 +189,7 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "centos7", "centos8", "debian" ]
-        php_version: [ "7.3", "7.4", "8.0", "8.1" ]
+        php_version: [ "7.3", "7.4", "8.0" ]
         build_group: [ "shopware" ]
     steps:
       - uses: actions/checkout@v1
@@ -238,7 +238,7 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "centos7", "centos8", "debian" ]
-        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0" ]
         build_group: [ "blackfire" ]
         exclude:
           - docker_base_images: "centos8"
