fix: remove schedule from dev images

--- a/.github/workflows/dev-docker-image-php.yml
+++ b/.github/workflows/dev-docker-image-php.yml
@@ -1,8 +1,8 @@
 ---
 name: Docker Image PHP
 on:
-  schedule:
-    - cron: "0 6 1 * *"
+  #  schedule:
+  #    - cron: "0 6 1 * *"
   push:
     paths:
       - images/.trigger
