--- a/.github/workflows/dev-docker-image-varnish.yml
+++ b/.github/workflows/dev-docker-image-varnish.yml
@@ -1,14 +1,14 @@
 ---
 name: Docker Image Varnish
 on:
-  schedule:
-  - cron: "0 6 1 * *"
+  #  schedule:
+  #  - cron: "0 6 1 * *"
   push:
     paths:
-    - images/.trigger
-    - images/varnish/**
+      - images/.trigger
+      - images/varnish/**
     branches:
-    - develop
+      - develop
 jobs:
   varnish:
     name: Varnish
@@ -16,12 +16,12 @@ jobs:
     environment:
       name: develop
     steps:
-    - uses: actions/checkout@v1
-    - run: ./images/scripts/build.sh "${BUILD_GROUP}"
-      env:
-        BUILD_GROUP: varnish
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
-        PUSH: "true"
-        DEFAULT_BASE: "debian"
+      - uses: actions/checkout@v1
+      - run: ./images/scripts/build.sh "${BUILD_GROUP}"
+        env:
+          BUILD_GROUP: varnish
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
+          PUSH: "true"
+          DEFAULT_BASE: "debian"
