--- a/.github/workflows/dev-docker-image-mysql.yml
+++ b/.github/workflows/dev-docker-image-mysql.yml
@@ -1,14 +1,14 @@
 ---
 name: Docker Image MySQL
 on:
-  schedule:
-  - cron: "0 6 1 * *"
+  #  schedule:
+  #    - cron: "0 6 1 * *"
   push:
     paths:
-    - images/.trigger
-    - images/mysql/**
+      - images/.trigger
+      - images/mysql/**
     branches:
-    - develop
+      - develop
 jobs:
   mysql:
     name: MySQL
@@ -16,11 +16,11 @@ jobs:
     environment:
       name: develop
     steps:
-    - uses: actions/checkout@v1
-    - run: ./images/scripts/build.sh "${BUILD_GROUP}"
-      env:
-        BUILD_GROUP: mysql
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
-        PUSH: "true"
+      - uses: actions/checkout@v1
+      - run: ./images/scripts/build.sh "${BUILD_GROUP}"
+        env:
+          BUILD_GROUP: mysql
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
+          PUSH: "true"
