drop centos support, refactor scripts

--- a/images/php-fpm/debian/blackfire/Dockerfile
+++ b/images/php-fpm/debian/blackfire/Dockerfile
@@ -18,4 +18,4 @@ RUN set -eux \
   && mv /tmp/blackfire/blackfire /usr/bin/blackfire \
   && rm -rf /tmp/blackfire
 
-COPY blackfire/rootfs/etc/php.d/blackfire.ini.template /etc/php/${PHP_VERSION}/mods-available/
+COPY blackfire/rootfs/. /
