--- a/images/php-fpm/debian/magento2/debug/Dockerfile
+++ b/images/php-fpm/debian/magento2/debug/Dockerfile
@@ -11,5 +11,4 @@ RUN set -eux \
   && apt-get update && apt-get install -y php${PHP_VERSION}-xdebug \
   && rm -rf /var/lib/apt/lists/*
 
-COPY debug/rootfs/etc/*.ini.template /etc/php/${PHP_VERSION}/cli/
-COPY debug/rootfs/etc/php.d/xdebug.ini.template /etc/php/${PHP_VERSION}/mods-available/
+COPY debug/rootfs/. /
