--- a/images/php-fpm/debian/wordpress/blackfire/Dockerfile
+++ b/images/php-fpm/debian/wordpress/blackfire/Dockerfile
@@ -18,6 +18,4 @@ RUN set -eux \
   && mv /tmp/blackfire/blackfire /usr/bin/blackfire \
   && rm -rf /tmp/blackfire
 
-COPY blackfire/rootfs/etc/php.d/*.ini.template /etc/php/${PHP_VERSION}/fpm/conf.d/
-
-USER www-data
+COPY blackfire/rootfs/. /
