--- a/.github/workflows/main-docker-image-php.yml
+++ b/.github/workflows/main-docker-image-php.yml
@@ -130,6 +130,26 @@ jobs:
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
 
+  wordpress-web:
+    name: WordPress WEB - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
+    runs-on: ubuntu-latest
+    needs: wordpress
+    strategy:
+      matrix:
+        docker_base_images: [ "debian" ]
+        php_version: [ "5.6", "7.0", "7.1", "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        build_group: [ "wordpress-web" ]
+    steps:
+      - uses: actions/checkout@v1
+      - run: ./images/scripts/build.sh "${BUILD_GROUP}"
+        env:
+          BUILD_GROUP: php-fpm/${{ matrix.docker_base_images }}/${{ matrix.build_group }}
+          PHP_VERSION: ${{ matrix.php_version }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
+          PUSH: "true"
+
   shopware:
     name: Shopware - PHP-FPM ${{ matrix.php_version }} ${{ matrix.docker_base_images }}
     runs-on: ubuntu-latest
