--- a/images/php-fpm/context/magento2-web/rootfs/etc/supervisor/supervisord.conf
+++ b/images/php-fpm/context/magento2-web/rootfs/etc/supervisor/supervisord.conf
@@ -1,23 +1,23 @@
 [unix_http_server]
-file=/run/supervisord.sock
+file=/home/www-data/supervisord.sock
 chmod=0700
-username=supervisor
-password=supervisor
+username=www-data
+password=www-data
 
 [supervisord]
 logfile=/dev/stdout
 loglevel=info
-pidfile=/run/supervisord.pid
+pidfile=/home/www-data/supervisord.sock
 nodaemon=true
-user=root
+user=www-data
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///run/supervisord.sock
-username=supervisor
-password=supervisor
+serverurl=unix:///home/www-data/supervisord.sock
+username=www-data
+password=www-data
 
 [eventlistener:processes]
 command=/usr/local/bin/stop-supervisor.sh
