revert changes of php-fpm docker container groups

--- a/images/php-fpm/context/magento2-web/rootfs/etc/supervisor/available.d/nginx.conf.template
+++ b/images/php-fpm/context/magento2-web/rootfs/etc/supervisor/available.d/nginx.conf.template
@@ -1,9 +1,9 @@
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;" -g "user nginx;"
-#stdout_logfile=/dev/fd/1
-#stdout_logfile_maxbytes=0
-#stderr_logfile=/dev/fd/2
-#stderr_logfile_maxbytes=0
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/fd/2
+stderr_logfile_maxbytes=0
 autorestart=true
 stopsignal=SIGQUIT
 stopwaitsecs=30
