--- a/images/php-fpm/debian/blackfire/Dockerfile
+++ b/images/php-fpm/debian/blackfire/Dockerfile
@@ -12,10 +12,12 @@ RUN set -eux \
   && wget -q -O - https://packages.blackfire.io/gpg.key | apt-key add - \
   && echo "deb http://packages.blackfire.io/debian any main" > /etc/apt/sources.list.d/blackfire.list \
   && apt-get update && apt-get install blackfire-php \
-  && rm -rf /var/lib/apt/lists/* \
+  && rm -rf /var/lib/apt/lists/* /var/log/apt \
   && mkdir -p /tmp/blackfire \
   && curl -fsSL https://blackfire.io/api/v1/releases/client/linux_static/amd64 | tar zxp -C /tmp/blackfire \
   && mv /tmp/blackfire/blackfire /usr/bin/blackfire \
   && rm -rf /tmp/blackfire
 
 COPY blackfire/rootfs/. /
+
+USER www-data
