--- a/images/php-fpm/debian/debug/Dockerfile
+++ b/images/php-fpm/debian/debug/Dockerfile
@@ -9,6 +9,8 @@ USER root
 
 RUN set -eux \
   && apt-get update && apt-get install -y php${PHP_VERSION}-xdebug \
-  && rm -rf /var/lib/apt/lists/*
+  && rm -rf /var/lib/apt/lists/* /var/log/apt
 
 COPY debug/rootfs/. /
+
+USER www-data
