--- a/images/php/debian/fpm/Dockerfile
+++ b/images/php/debian/fpm/Dockerfile
@@ -4,9 +4,11 @@ FROM ${IMAGE_NAME}:${PHP_VERSION}-debian
 
 ARG PHP_VERSION
 
+USER root
+
 RUN set -eux \
   && apt-get update && apt-get install -y php${PHP_VERSION}-fpm \
-  && rm -rf /var/lib/apt/lists/* \
+  && rm -rf /var/lib/apt/lists/* /var/log/apt \
 	&& cd /etc/php/${PHP_VERSION}/fpm \
 	&& { \
      echo '[global]'; \
