--- a/images/php-fpm/debian/magento1/Dockerfile
+++ b/images/php-fpm/debian/magento1/Dockerfile
@@ -14,3 +14,5 @@ RUN set -eux \
      https://raw.githubusercontent.com/netz98/n98-magerun/master/res/autocompletion/bash/n98-magerun.phar.bash \
   # Create mr alias for n98-magerun
   && ln -s /usr/bin/n98-magerun /usr/bin/mr
+
+USER www-data
