--- a/images/varnish/debian/6.4/Dockerfile
+++ b/images/varnish/debian/6.4/Dockerfile
@@ -70,7 +70,7 @@ RUN set -eux \
   && apt-get install -y --no-install-recommends --allow-downgrades \
      libgetdns10 \
      varnish=${VARNISH_VERSION} \
-  && rm -rf /var/lib/apt/lists/* \
+  && rm -rf /var/lib/apt/lists/* /var/log/apt \
   && PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/sbin" ldconfig -n /usr/lib/varnish/vmods
 
 ENV VCL_CONFIG      /etc/varnish/default.vcl
