update supervisord settings in magento2-web containers

--- a/images/php-fpm/context/magento2-web/rootfs/etc/supervisor/available.d/nginx.conf.template
+++ b/images/php-fpm/context/magento2-web/rootfs/etc/supervisor/available.d/nginx.conf.template
@@ -1,5 +1,5 @@
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;" -g "user nginx;"
+command=/usr/sbin/nginx -g "daemon off;"
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/2
