--- a/images/php-fpm/context/magento2-web/rootfs/etc/supervisor/available.d/php-fpm.conf.template
+++ b/images/php-fpm/context/magento2-web/rootfs/etc/supervisor/available.d/php-fpm.conf.template
@@ -1,5 +1,5 @@
 [program:php-fpm]
-command=/usr/sbin/php-fpm -F -O -R --user www-data
+command=/usr/sbin/php-fpm -F -O -R
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/2
