--- a/images/php-fpm/debian/wordpress/debug/Dockerfile
+++ b/images/php-fpm/debian/wordpress/debug/Dockerfile
@@ -9,6 +9,7 @@ USER root
 
 RUN set -eux \
   && apt-get update && apt-get install -y php${PHP_VERSION}-xdebug \
+  && chown -R www-data: /etc/php /var/lib/php \
   && rm -rf /var/lib/apt/lists/* /var/log/apt
 
 COPY debug/rootfs/. /
