--- a/images/varnish/context/rootfs/etc/supervisor/conf.d/varnish.conf
+++ b/images/varnish/context/rootfs/etc/supervisor/conf.d/varnish.conf
@@ -13,7 +13,9 @@ stderr_logfile_maxbytes=0
 priority=10
 autorestart=true
 startretries=10
-startsecs=3
+startsecs=5
+restartpause=3
+depends_on=config
 
 [program:varnishncsa-client]
 command=varnishncsa -q 'ReqURL ne "/varnishcheck"' -F '{"Timestamp": "%t", "Varnish-Side": "%{Varnish:side}x", "Age": %{age}o, "Handling": "%{Varnish:handling}x", #"Request": "%r", "Status": "%s", "Response-Reason": "%{VSL:RespReason}x", "Fetch-Error": "%{VSL:FetchError}x", "X-Forwarded-For": "%{x-forwarded-for}i", "Remote-User":# "%u", "Bytes": "%b", "Time-To-Serve": %D, "User-Agent": "%{User-agent}i", "Referer": "%{Referer}i", "X-Varnish":  "%{x-varnish}o", "X-Magento-Tags":  #"%{x-magento-tags}o"}'
@@ -23,7 +25,9 @@ stderr_logfile=/dev/fd/1
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=10
-startsecs=3
+startsecs=5
+restartpause=3
+depends_on=varnishd
 
 [program:varnishncsa-backend]
 command=varnishncsa -b -F '{"Timestamp": "%t", "Varnish-Side": "%{Varnish:side}x", "Handling": "%{Varnish:handling}x", "Request": "%r", "Status": "%s", #"Response-Reason": "%{VSL:RespReason}x", "Fetch-Error": "%{VSL:FetchError}x", "Bytes": "%b", "Time-To-Serve": %D}'
@@ -33,4 +37,6 @@ stderr_logfile=/dev/fd/1
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=10
-startsecs=3
+startsecs=5
+restartpause=3
+depends_on=varnishd
