fix: mercure.md and typo in mercure.base.yml

--- a/templates/environments/includes/mercure.base.yml
+++ b/templates/environments/includes/mercure.base.yml
@@ -16,7 +16,7 @@ services:
       {{ end }}
     labels:
       - traefik.enable=true
-      - traefik.http.routers.{{ .reward_env_name }}-mercure.rule=Host(`{{ .traefik_domain }}` && PathPrefix(`/.well-known/mercure`))
+      - traefik.http.routers.{{ .reward_env_name }}-mercure.rule=Host(`{{ .traefik_domain }}`) && PathPrefix(`/.well-known/mercure`)
       - traefik.http.routers.{{ .reward_env_name }}-mercure.tls=true
       - traefik.http.services.{{ .reward_env_name }}-mercure.loadbalancer.server.port=80
       - dev.reward.container.name=mercure
