set nginx container www-data groups gid to 1000

--- a/images/nginx/1.18/Dockerfile
+++ b/images/nginx/1.18/Dockerfile
@@ -3,7 +3,9 @@ FROM nginx:1.18-alpine
 COPY --from=hairyhenderson/gomplate:slim /gomplate /usr/local/bin/gomplate
 
 RUN set -eux \
-  && apk add --no-cache bash shadow
+    && apk add --no-cache bash shadow \
+    && groupmod -g 1000 www-data \
+    && usermod -aG www-data nginx
 
 ENV NGINX_UPSTREAM_HOST           php-fpm
 ENV NGINX_UPSTREAM_PORT           9000
@@ -20,6 +22,6 @@ ENV NGINX_RESOLVER                127.0.0.11
 COPY rootfs/. /
 
 CMD find /etc/nginx -name '*.template' -exec sh -c 'gomplate <${1} >${1%.*}' sh {} \; \
-  && nginx -g "daemon off;"
+    && nginx -g "daemon off;"
 
 WORKDIR /var/www/html
