--- a/.github/workflows/main-docker-image-rabbitmq.yml
+++ b/.github/workflows/main-docker-image-rabbitmq.yml
@@ -34,5 +34,5 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
-          DOCKER_BUILD_COMMAND: "buildx build"
+          DOCKER_USE_BUILDX: "true"
           DOCKER_BUILD_PLATFORM: "linux/amd64,linux/arm/v7,linux/arm64"
