--- a/.github/workflows/main-docker-image-varnish.yml
+++ b/.github/workflows/main-docker-image-varnish.yml
@@ -13,13 +13,36 @@ jobs:
   varnish:
     name: Varnish
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        docker_base_image: [ "debian" ]
+        arch: [ "linux/amd64,linux/arm64" ]
+        varnish_version: [ "6.0", "6.5", "6.6", "7.0", "7.1" ]
+        include:
+          - arch: "linux/amd64"
+            varnish_version: "4.1"
+          - arch: "linux/amd64"
+            varnish_version: "6.4"
     steps:
       - uses: actions/checkout@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: image=moby/buildkit:master
       - run: ./images/scripts/build.sh "${BUILD_GROUP}"
         env:
-          BUILD_GROUP: varnish
+          BUILD_GROUP: varnish/${{ matrix.docker_base_image }}/${{ matrix.varnish_version }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
           PUSH: "true"
-          DEFAULT_BASE: "debian"
+          DOCKER_USE_BUILDX: "true"
+          DOCKER_BUILD_PLATFORM: ${{ matrix.arch }}
