--- a/.github/workflows/main-docker-image-varnish.yml
+++ b/.github/workflows/main-docker-image-varnish.yml
@@ -21,8 +21,10 @@ jobs:
         include:
           - arch: "linux/amd64"
             varnish_version: "4.1"
+            docker_base_image: "debian"
           - arch: "linux/amd64"
             varnish_version: "6.4"
+            docker_base_image: "debian"
     steps:
       - uses: actions/checkout@v1
       - name: Login to DockerHub
